<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="http://schemas.android.com/tools">
    <string name="app_name">Hous-</string>
    <string name="null_point_exception">NullPointException occurs..</string>
    <string name="null_point_exception_detail">NullPointException occurs - %s : %s</string>
    <string name="null_point_exception_detail_two_item">NullPointException occurs - %s : %s, %s : %s</string>
    <string name="null_point_exception_warning_dialog_argument">"WarningDialogFragment에 필요한 arguments에 안들어옴"</string>
    <string name="null_point_exception_to_do_bottom_sheet_dialog_argument">"ToDoBottomSheetDialogFragment에 필요한 arguments에 안들어옴"</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="close_img_desc">닫기 버튼</string>
    <string name="back_btn_image_desc">뒤로가기 버튼</string>
    <string name="finish_app_toast_msg">뒤로가기를 한 번 더 누르시면 앱이 종료돼요!</string>
    <string name="not_supported_type">지원하지 않는 타입입니다.</string>
    <string name="refresh_error">자동로그인이 만료되었습니다. 다시 로그인해주시기 바랍니다.</string>
    <string name="sever_500_error_msg">정보를 불러오는 데 실패했어요.</string>
    <string name="warning_splash_title">다른 기기에서 로그인 중이에요!</string>
    <string name="warning_splash_desc">다른 기기에서 강제 로그아웃 후\n현재 기기에서 Hous-를 사용해볼까요?</string>
    <string name="warning_splash_cancel">취소</string>
    <string name="warning_splash_confirm">현재 기기에서 로그인</string>
    <string name="warning_edit_hous_name_title">앗, 잠깐! 이대로 나가면\n우리 집 별명이 저장되지 않아요!</string>
    <string name="warning_edit_hous_name_desc">수정을 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_edit_hous_name_cancel">돌아가기</string>
    <string name="warning_edit_hous_name_confirm">나가기</string>
    <string name="warning_add_rule_title">앗, 잠깐! 이대로 나가면\nRules가 추가되지 않아요!</string>
    <string name="warning_add_rule_desc">Rules 추가를 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_add_rule_cancel">계속 작성하기</string>
    <string name="warning_add_rule_confirm">나가기</string>
    <string name="warning_edit_rule_title">수정사항이 저장되지 않았어요!</string>
    <string name="warning_edit_rule_desc">Rules 수정을 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_edit_rule_cancel">계속 수정하기</string>
    <string name="warning_edit_rule_confirm">나가기</string>
    <string name="warning_delete_rule_title">안녕, Rules...</string>
    <string name="warning_delete_rule_desc">Rules는 한 번 삭제하면 복구되지 않아요.</string>
    <string name="warning_delete_rule_cancel">취소하기</string>
    <string name="warning_delete_rule_confirm">삭제하기</string>
    <string name="warning_add_to_do_title">앗, 잠깐! 이대로 나가면\nto-do가 추가되지 않아요!</string>
    <string name="warning_add_to_do_desc">to-do 추가를 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_add_to_do_cancel">계속 작성하기</string>
    <string name="warning_add_to_do_confirm">나가기</string>
    <string name="warning_edit_to_do_title">수정사항이 저장되지 않았어요!</string>
    <string name="warning_edit_to_do_desc">to-do 수정을 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_edit_to_do_cancel">계속 수정하기</string>
    <string name="warning_edit_to_do_confirm">나가기</string>
    <string name="warning_delete_to_do_title">안녕, to-do...</string>
    <string name="warning_delete_to_do_desc">to-do는 한 번 삭제하면 복구되지 않아요.</string>
    <string name="warning_delete_to_do_cancel">취소하기</string>
    <string name="warning_delete_to_do_confirm">삭제하기</string>
    <string name="warning_edit_profile_title">수정사항이 저장되지 않았어요!</string>
    <string name="warning_edit_profile_desc">정말 취소하려면 나가기 버튼을 눌러주세요.</string>
    <string name="warning_edit_profile_cancel">계속 수정하기</string>
    <string name="warning_edit_profile_confirm">나가기</string>
    <string name="warning_stop_test_title">테스트를 완료하지 않았어요\n여기서 그만둘까요?</string>
    <string name="warning_stop_test_desc">그만둔 테스트는 나중에 다시 시작할 수 있어요.</string>
    <string name="warning_stop_test_cancel">계속하기</string>
    <string name="warning_stop_test_confirm">그만두기</string>
    <string name="warning_logout_title">정말 로그아웃 하시겠어요?</string>
    <string name="warning_logout_desc">다시 로그인하면 현재 방을 계속 사용할 수 있어요.</string>
    <string name="warning_logout_cancel">취소하기</string>
    <string name="warning_logout_confirm">로그아웃</string>
    <string name="waring_peed_back_title">"피드백이 저장되지 않았어요!"</string>
    <string name="waring_peed_back_desc">"정말 취소하려면 나가기 버튼을 눌러주세요."</string>
    <string name="waring_peed_back_cancel">"계속 작성하기"</string>
    <string name="waring_peed_back_confirm">"나가기"</string>
    <string name="title_hous">Hous-</string>
    <string name="title_profile">Profile</string>
    <string name="title_to_do">To-Do</string>
    <string name="login_kakao_login">카카오톡으로 계속하기</string>
    <string name="login_desc_use">로그인 시 이용약관 및</string>
    <string name="login_desc_personal">" "개인정보 처리 방침에 동의하게 됩니다.</string>
    <string name="login_link_use">https://sugared-lemming-812.notion.site/4dee0853cb154f2ab5162ce6c6849b54?pvs=4</string>
    <string name="login_link_personal">https://sugared-lemming-812.notion.site/9b1363815906432a8bca42174a033a54?pvs=4</string>
    <string name="user_input_user_info">회원 정보 입력</string>
    <string name="user_input_nickname">이름</string>
    <string name="user_input_required">*</string>
    <string name="user_input_birthday">생년월일</string>
    <string name="user_input_birthday_hint">YYYY / MM / DD</string>
    <string name="user_input_open_birthday">생일 정보 비공개</string>
    <string name="user_input_next">다음으로</string>
    <string name="date_picker_confirm">확인</string>
    <string name="date_picker_cancel">취소</string>
    <string name="login_toast">로그인되었습니다.</string>
    <string name="our_house_rules">우리 집 Rules</string>
    <string name="our_house_representative_rules_empty">아직 우리 집 Rules가 없어요!</string>
    <string name="our_house_general_rules_empty">다른 Rule도 추가해보세요!</string>
    <string name="our_house_representative_rules_number_one">1.</string>
    <string name="our_house_representative_rules_number_two">2.</string>
    <string name="our_house_representative_rules_number_three">3.</string>
    <string name="hous_our_rules">Our Rules</string>
    <string name="hous_our_rules_img_desc">btn_of_our_rules</string>
    <string name="hous_empty_our_rules">아직 우리 집 Rules가 없어요!</string>
    <string name="hous_filterd_empty_our_rules">해당되는 Rules가 없어요!</string>
    <string name="hous_empty_our_rules_add">다른 Rule도 추가해보세요!</string>
    <string name="our_rule_duplicate_rule">똑같은 이름의 Rule이 있어요!</string>
    <string name="our_rule_limit_photo_count">사진은 5개 까지만 추가할 수 있어요!</string>
    <string name="our_rule_limit_represent_rules_count">대표 rule 은 3개 까지만 추가할 수 있어요!</string>
    <string name="our_rule_limit_title">Rules 개수 초과</string>
    <string name="our_rule_limit_content">우리 집 Rules가 너무 많아요!\n필요하지 않은 rule을 삭제하고\n다시 시도해 주세요~</string>
    <string name="our_rule_empty_description">아직 우리 집 Rules가 없어요!</string>
    <string name="our_rule_add_new_rule_title">Rules 추가</string>
    <string name="our_rule_edit_rule_title">Rules 수정</string>
    <string name="our_rule_represent_rule_title">대표 Rules 선택</string>
    <string name="our_rule_add_new_rule">추가</string>
    <string name="our_rule_save_new_rule">저장</string>
    <string name="our_rule_delete_our_rule_button">삭제</string>
    <string name="our_rule_delete_our_rule_title">Rules 삭제</string>
    <string name="our_rule_input">Rules 입력</string>
    <string name="our_rule_add_error_title">Rules 개수 초과</string>
    <string name="our_rule_add_error_description">우리 집 Rules가 너무 많아요!\n필요하지 않은 Rule은 삭제하고\n다시 시도해주세요~</string>
    <string name="our_rule_add_error_ok">알겠어요!</string>
    <string name="our_rule_add_cnt">%d/20</string>
    <string name="our_rule_add">추가하기</string>
    <string name="our_rule_delete">삭제하기</string>
    <string name="our_rule_edit">수정하기</string>
    <string name="our_rule_menu_edit_representation">대표 Rules 선택</string>
    <string name="our_rule_menu_edit_guide">가이드 다시보기</string>
    <string name="our_rule_add_edit_title">제목</string>
    <string name="our_rule_add_edit_description">설명</string>
    <string name="our_rule_add_edit_photo">사진</string>
    <string name="enter_room_settings_img_desc">설정 버튼</string>
    <string name="enter_room_title">이제 하우스에 입장해볼까요?</string>
    <string name="enter_room_create_title">방 만들기</string>
    <string name="enter_room_create_desc">가장 먼저 방을 만들어\n호미들을 초대해 보세요!</string>
    <string name="enter_room_create_img_desc">img of create room</string>
    <string name="enter_room_enter_code_title">초대코드 입력하기</string>
    <string name="enter_room_enter_code_desc">초대코드를 입력해\n방에 입장하세요!</string>
    <string name="enter_room_enter_code_img_desc">img of enter code</string>
    <string name="create_room_title">방 만들기</string>
    <string name="create_room_desc">멤버들이 확인할 수 있도록 방 이름을 설정해 주세요.</string>
    <string name="create_room_name_count">%d/8</string>
    <string name="create_room_dialog_img_desc">img of dialog enter room</string>
    <string name="create_room_dialog_invite">호미들 바로 초대하기</string>
    <string name="crate_room_dialog_desc">방 생성이 완료되었습니다.\n참여 코드를 복사해서\n룸메이트에게 공유해 보세요!</string>
    <string name="enter_room_code_title">방 초대코드 입력하기</string>
    <string name="enter_room_code_desc">초대코드를 입력하면 방에 들어갈 수 있어요.</string>
    <string name="enter_room_code_warning">* 참여할 수 없는 코드예요.</string>
    <string name="enter_room_code_btn">방 참여하기</string>
    <string name="enter_room_code_dialog_owner_desc">님이</string>
    <string name="enter_room_code_dialog_desc">생성한 방에 참여할까요?</string>
    <string name="enter_room_code_dialog_enter">참여하기</string>
    <string name="enter_room_code_close_img_desc">닫기 버튼</string>
    <string name="enter_room_code_full_capacity">해당 방의 정원인 16명을 초과했습니다.</string>
    <string name="hous_title">%s님의,\n%s 하우스</string>
    <string name="hous_btn_copy_code_desc">초대코드 복사 버튼</string>
    <string name="hous_btn_edit_desc">수정하기 버튼</string>
    <string name="hous_to_do_progress_title">오늘의 Our to-do 진행률</string>
    <string name="hous_my_todo">MY to-do</string>
    <string name="hous_my_todo_img_desc">img of myTod in hous</string>
    <string name="hous_my_todo_cheer">동글이의\n응원을 받고\n오늘도 화이팅!</string>
    <string name="hous_homies">Homies</string>
    <string name="hous_homies_profile_img_decnsc">img of profile color</string>
    <string name="hous_homies_profile_img_desc">img of profile color</string>
    <string name="hous_empty_my_todo">아직 내 to-do가 없어요!</string>
    <string name="hous_toast_copy">초대코드가 복사되었습니다.</string>
    <string name="hous_not_tested_yet">아직 성향 테스트를 하지 않은 호미예요!</string>
    <string name="hous_empty_homies">아직 나의 성향을 확인해 보지 않았어요!</string>
    <string name="hous_check_personality">나의 호미 성향 확인하기</string>
    <string name="edit_hous_name_back_img_desc">back button</string>
    <string name="edit_hous_name_done">저장</string>
    <string name="edit_hous_name_title">우리 집 별명 바꾸기</string>
    <string name="edit_hous_name_description">다른 호미들이 확인할 수 있도록 방 이름을 설정해주세요.</string>
    <string name="edit_hous_name_count">%d/8</string>
    <string name="to_do_total">총</string>
    <string name="to_do_bottom_sheet_delete">삭제하기</string>
    <string name="dialog_to_do_title">안녕, to-do...</string>
    <string name="dialog_to_do_content">to-do는 한 번 삭제하면 복구되지 않아요.</string>
    <string name="dialog_cancel">취소하기</string>
    <string name="settings_title">설정</string>
    <string name="settings_notification">알림</string>
    <string name="settings_info">개인정보 및 약관</string>
    <string name="settings_opensource">오픈소스 라이브러리</string>
    <string name="settings_feedback">호미나라 피드백 보내기</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_room_out">방 퇴사하기</string>
    <string name="settings_withdraw_desc">* 회원 탈퇴는 방 퇴사 이후 \'방만들기 화면\'에서 할 수 있어요!</string>
    <string name="settings_withdraw">회원탈퇴</string>
    <string name="force_update_title">업데이트가 필요해요!</string>
    <string name="force_update_desc">새로운 Hous-가 나왔어요!\nHous-와 함께 즐거운\n공동생활을 계속해 봐요!</string>
    <string name="force_update_img_desc">강제 업데이트 이미지</string>
    <string name="force_update_confirm">좋아요!</string>
</resources>