<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="hasRoom"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.settings.SettingsActivity">

        <ImageButton
            android:id="@+id/btn_settings_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@null"
            android:contentDescription="@string/back_btn_image_desc"
            android:padding="8dp"
            android:src="@drawable/ic_back_g4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:layout_constraintBottom_toBottomOf="@id/btn_settings_back"
            app:layout_constraintStart_toEndOf="@id/btn_settings_back"
            app:layout_constraintTop_toTopOf="@id/btn_settings_back" />

        <TextView
            android:id="@+id/tv_settings_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_notification"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />

        <TextView
            android:id="@+id/tv_settings_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_info"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_notification" />

        <TextView
            android:id="@+id/tv_settings_opensource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_opensource"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_info" />

        <TextView
            android:id="@+id/tv_settings_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_feedback"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_opensource" />

        <TextView
            android:id="@+id/tv_settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_logout"
            android:textColor="@color/hous_black"
            android:theme="@style/B1"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_feedback" />

        <TextView
            android:id="@+id/tv_settings_room_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_room_out"
            android:textColor="@color/hous_red"
            android:theme="@style/B1"
            android:visibility="@{hasRoom ? View.VISIBLE : View.GONE}"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_logout" />

        <TextView
            android:id="@+id/tv_settings_withdraw_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_withdraw_desc"
            android:textColor="@color/hous_g_4"
            android:theme="@style/B3"
            android:visibility="@{hasRoom ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_room_out" />

        <TextView
            android:id="@+id/tv_settings_withdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp"
            android:text="@string/settings_withdraw"
            android:textColor="@color/hous_red"
            android:theme="@style/B1"
            android:visibility="@{hasRoom ? View.GONE : View.VISIBLE}"
            app:drawableEndCompat="@drawable/ic_settings_next"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
