<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="30dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_to_do_title"
        android:textColor="@color/black"
        android:theme="@style/H4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_to_do_content"
        android:textColor="@color/hous_g_5"
        android:theme="@style/Description"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:text="@string/dialog_cancel"
        android:textColor="@color/hous_g_6"
        android:theme="@style/B2"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_delete"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_content" />

    <TextView
        android:id="@+id/tv_dialog_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/to_do_bottom_sheet_delete"
        android:textColor="@color/hous_red"
        android:theme="@style/B2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>