<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        tools:background="@drawable/shape_blue_fill_8_rect"
        tools:context=".presentation.force_update.ForceUpdateDialogFragment">

        <ImageButton
            android:id="@+id/btn_force_update_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/close_img_desc"
            android:padding="16dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_force_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/force_update_title"
            android:textColor="@color/hous_black"
            android:theme="@style/H4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_force_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/force_update_img_desc"
            android:src="@drawable/ic_force_update"
            app:layout_constraintEnd_toEndOf="@id/tv_force_update_title"
            app:layout_constraintStart_toStartOf="@id/tv_force_update_title"
            app:layout_constraintTop_toBottomOf="@id/tv_force_update_title" />

        <TextView
            android:id="@+id/tv_force_update_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/force_update_desc"
            android:textColor="@color/hous_g_7"
            android:theme="@style/B2"
            app:layout_constraintEnd_toEndOf="@id/tv_force_update_title"
            app:layout_constraintStart_toStartOf="@id/tv_force_update_title"
            app:layout_constraintTop_toBottomOf="@id/iv_force_update" />

        <TextView
            android:id="@+id/tv_force_update_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/force_update_confirm"
            android:textColor="@color/hous_g_5"
            android:theme="@style/B3"
            app:layout_constraintEnd_toEndOf="@id/tv_force_update_title"
            app:layout_constraintStart_toStartOf="@id/tv_force_update_title"
            app:layout_constraintTop_toBottomOf="@id/tv_force_update_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
