<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hous_white"
        tools:context=".presentation.enter_room.EnterRoomFragment">

        <ImageButton
            android:id="@+id/btn_enter_room_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:padding="12dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/enter_room_settings_img_desc" />

        <TextView
            android:id="@+id/tv_enter_room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_room_title"
            android:textAppearance="@style/H3"
            app:layout_constraintBottom_toTopOf="@id/layout_enter_room_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_enter_room_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_yellow_fill_10_rect"
            android:clickable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toTopOf="@id/layout_enter_room_enter_code"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_room_title">

            <TextView
                android:id="@+id/tv_enter_room_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_room_create_title"
                android:textAppearance="@style/H3"
                android:textColor="@color/hous_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_enter_room_create_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_room_create_desc"
                android:textAppearance="@style/B1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/iv_enter_room_create"
                app:layout_constraintStart_toStartOf="@id/tv_enter_room_create_title"
                app:layout_constraintTop_toBottomOf="@id/tv_enter_room_create_title" />

            <ImageView
                android:id="@+id/iv_enter_room_create"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/enter_room_create_img_desc"
                android:src="@drawable/ic_create_room_start_graphic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_enter_room_enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_red_fill_10_rect"
            android:clickable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_enter_room_create">

            <TextView
                android:id="@+id/tv_enter_room_enter_code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_room_enter_code_title"
                android:textAppearance="@style/H3"
                android:textColor="@color/hous_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_enter_room_enter_code_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_room_enter_code_desc"
                android:textAppearance="@style/B1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/iv_enter_room_enter_code"
                app:layout_constraintStart_toStartOf="@id/tv_enter_room_enter_code_title"
                app:layout_constraintTop_toBottomOf="@id/tv_enter_room_enter_code_title" />

            <ImageView
                android:id="@+id/iv_enter_room_enter_code"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/enter_room_enter_code_img_desc"
                android:src="@drawable/ic_enter_room_start_graphic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
