<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="hous.release.android.presentation.enter_room.enter_room_code.EnterRoomCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_fill_8_rect"
        android:paddingBottom="24dp"
        tools:context=".presentation.enter_room.enter_room_code.EnterRoomCodeDialogFragment">

        <ImageButton
            android:id="@+id/btn_enter_room_code_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/enter_room_code_close_img_desc"
            android:padding="16dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_enter_room_code_dialog"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/create_room_dialog_img_desc"
            android:src="@drawable/ic_enter_room_graphic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter_room_code_dialog_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:text="@{viewModel.roomInfo.nickname}"
            android:textColor="@color/hous_black"
            android:textSize="24dp"
            app:layout_constraintEnd_toStartOf="@id/tv_enter_room_code_dialog_owner_desc"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_enter_room_code_dialog" />

        <TextView
            android:id="@+id/tv_enter_room_code_dialog_owner_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/enter_room_code_dialog_owner_desc"
            android:textColor="@color/hous_g_6"
            android:theme="@style/B2"
            app:layout_constraintBottom_toBottomOf="@id/tv_enter_room_code_dialog_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_enter_room_code_dialog_owner" />

        <TextView
            android:id="@+id/tv_enter_room_code_dialog_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@string/enter_room_code_dialog_desc"
            android:textColor="@color/hous_g_6"
            android:theme="@style/B1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_room_code_dialog_owner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter_room_code_dialog_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/hous_blue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:onClick="@{()->viewModel.postEnterRoomId()}"
            android:paddingVertical="10dp"
            android:stateListAnimator="@null"
            android:text="@string/enter_room_code_dialog_enter"
            android:textColor="@color/hous_white"
            android:theme="@style/B1"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_room_code_dialog_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
